--- a/index.html
+++ b/index.html
@@ -74,21 +74,6 @@
             transform: translateY(-2px);
             box-shadow: 0 10px 20px rgba(0,0,0,0.15);
         }
-
-        .main-page-link {
-            display: block;
-            margin-top: 20px;
-            text-decoration: none;
-            color: #1f2937;
-            font-size: 1rem;
-            font-weight: 500;
-            text-align: center;
-            transition: color 0.3s ease;
-        }
-
-        .main-page-link:hover {
-            color: #3b82f6;
-        }
     </style>
 </head>
 <body>
@@ -96,8 +81,14 @@
     <div class="login-container">
         <h1>เสนอ<br>อาจารย์สุวิทย์ วงศ์คุ้มสิน</h1>
         <p>โปรดคลิกที่ปุ่มด้านล่างเพื่อเข้าถึงเนื้อหาของ TCP Concepts</p>
-        <a href="login.html" class="button">เข้าสู่หน้าเนื้อหา</a>
+        <button class="button" onclick="showAlert()">เข้าสู่หน้าเนื้อหา</button>
     </div>
+
+    <script>
+        function showAlert() {
+            alert("ยินดีต้อนรับเข้าสู่หน้าเนื้อหา TCP Concepts ครับ");
+        }
+    </script>
 
 </body>
 </html>
