--- a/login.html
+++ b/login.html
@@ -164,17 +164,17 @@
 
         <div class="card" onclick="toggleContent(3)">
             <div class="card-content">
-                <h2>คุณสมบัติเด่นของ TCP</h2>
-                <p>คุณสมบัติที่สำคัญในการรับประกันการส่งข้อมูลที่เชื่อถือได้</p>
+                <h2>  ข้อเสียของTCP</h2>
+                <p>ข้อเสียของ TCP </p>
             </div>
         </div>
         <div class="content" id="content-3">
             <ul>
-                <li><strong>Reliable (น่าเชื่อถือ):</strong> TCP รับประกันว่าข้อมูลที่ส่งจะถึงปลายทางอย่างสมบูรณ์ ไม่มีการสูญหายหรือผิดพลาด</li>
-                <li><strong>Ordered (เรียงลำดับ):</strong> ข้อมูลจะได้รับการจัดลำดับอย่างถูกต้องตามที่ส่งมาจากต้นทาง</li>
-                <li><strong>Connection-Oriented (เน้นการเชื่อมต่อ):</strong> ต้องมีการสร้างการเชื่อมต่อก่อนการส่งข้อมูลและปิดการเชื่อมต่อเมื่อสิ้นสุด</li>
-                <li><strong>Flow Control (ควบคุมการไหล):</strong> ป้องกันไม่ให้ผู้ส่งส่งข้อมูลเร็วเกินกว่าที่ผู้รับจะประมวลผลได้</li>
-                <li><strong>Congestion Control (ควบคุมความแออัด):</strong> ปรับลดอัตราการส่งข้อมูลเมื่อเครือข่ายมีปริมาณการจราจรสูง</li>
+                <li><strong>ความซับซ้อน (Complexity):</strong> TCP เป็นโปรโตคอลที่ซับซ้อนมาก เพราะต้องจัดการหลายอย่างพร้อมกัน ทั้งการสร้างและยุติการเชื่อมต่อ, การตรวจสอบข้อผิดพลาดของข้อมูล, และการรับรองว่าข้อมูลถูกส่งถึงปลายทาง ทำให้ต้องใช้ทรัพยากรทั้งหน่วยความจำและ CPU เยอะกว่าโปรโตคอลที่เรียบง่ายกว่าอย่าง UDP</li>
+                <li><strong>ประสิทธิภาพต่ำในบางกรณี (Lower Performance):</strong> เนื่องจากต้องใช้กระบวนการที่ซับซ้อนในการส่งข้อมูล ทำให้ TCP มีความเร็วที่ช้ากว่า UDP โดยเฉพาะในแอปพลิเคชันที่ต้องการความเร็วสูงและยอมให้ข้อมูลขาดหายได้เล็กน้อย เช่น การสตรีมวิดีโอ, เกมออนไลน์ หรือการโทรศัพท์ผ่านอินเทอร์เน็ต (VoIP)</li>
+                <li><strong>ค่าใช้จ่ายสูง (Overhead):</strong> แต่ละแพ็กเก็ตของ TCP จะมีส่วนหัวข้อมูล (Header) ขนาดใหญ่ถึง 20-60 ไบต์ ซึ่งใหญ่กว่าส่วนหัวของ UDP ที่มีขนาดเพียง 8 ไบต์เท่านั้น ทำให้ต้องใช้แบนด์วิธในการส่งข้อมูลเพิ่มขึ้น และทำให้ข้อมูลจริงที่ส่งมีสัดส่วนน้อยลงเมื่อเทียบกับข้อมูลทั้งหมด</li>
+                <li><strong>ความหน่วง (Latency):</strong> กระบวนการทำงานของ TCP ที่ต้องรอการตอบรับ (Acknowledgement) จากปลายทางก่อนจะส่งแพ็กเก็ตชุดถัดไป ทำให้เกิดความหน่วง หรือดีเลย์ขึ้นมา ซึ่งเป็นปัญหาใหญ่สำหรับแอปพลิเคชันที่ต้องการตอบสนองแบบเรียลไทม์</li>
+                <li><strong>ไม่เหมาะกับการส่งข้อมูลแบบกระจาย (Multicast):</strong> TCP ถูกออกแบบมาเพื่อการส่งข้อมูลแบบหนึ่งต่อหนึ่ง (Unicast) ทำให้ไม่รองรับการส่งข้อมูลไปยังหลายๆ เครื่องพร้อมกัน (Multicast) ซึ่งถ้าต้องการส่งข้อมูลให้หลายเครื่องพร้อมกันต้องใช้โปรโตคอลอื่น หรือต้องใช้เทคนิคที่ซับซ้อนเข้ามาช่วยครับ</li>
             </ul>
         </div>
 
@@ -248,4 +248,5 @@
 </body>
 
 </html>
+
 
