--- a/index.html
+++ b/index.html
@@ -86,9 +86,11 @@
 
     <script>
         function showAlert() {
-            alert("ยินดีต้อนรับเข้าสู่หน้าเนื้อหา TCP Concepts ครับ");
+            alert("ยินดีต้อนรับเข้าสู่หน้าเนื้อหา TCP Concepts ");
         }
     </script>
 
 </body>
 </html>
+>
+
