--- a/login.html
+++ b/login.html
@@ -192,22 +192,31 @@
             </ul>
         </div>
 
-        <div class="card" onclick="toggleContent(5)">
-            <div class="card-content">
-                <h2>ความแตกต่างระหว่าง TCP และ UDP</h2>
-                <p>ควรใช้แต่ละอย่างเมื่อใด?</p>
-            </div>
-        </div>
-        <div class="content" id="content-5">
-            <p><strong>TCP:</strong> ให้ความสำคัญกับความน่าเชื่อถือและความปลอดภัยของข้อมูล ทำให้ข้อมูลถูกส่งอย่างครบถ้วน แม้จะต้องใช้เวลามากขึ้น</p>
-            <p><strong>UDP:</strong> เป็นโปรโตคอลที่เร็วกว่า แต่ไม่มีการรับประกันความน่าเชื่อถือของข้อมูล เหมาะสำหรับการใช้งานที่ต้องการความเร็วสูง เช่น การสตรีมวิดีโอ การโทรศัพท์ผ่านอินเทอร์เน็ต (VoIP) หรือการเล่นเกมออนไลน์</p>
-            <ul>
-                <li><strong>การเชื่อมต่อ:</strong> TCP ต้องการการสร้างการเชื่อมต่อก่อน (Three-Way Handshake) ในขณะที่ UDP สามารถส่งข้อมูลได้ทันทีโดยไม่ต้องมีการสร้างการเชื่อมต่อ</li>
-                <li><strong>ความน่าเชื่อถือ:</strong> TCP รับประกันความถูกต้องของข้อมูลและมีการส่งข้อมูลซ้ำหากสูญหาย, UDP ไม่มีการรับประกันนี้</li>
-                <li><strong>ความเร็ว:</strong> UDP มีความเร็วสูงกว่าเพราะไม่มีการตรวจสอบหรือการควบคุมข้อผิดพลาด</li>
-            </ul>
-        </div>
+ <div class="card" onclick="toggleContent(5)">
+    <div class="card-content">
+        <h2>ความแตกต่างระหว่าง TCP และ UDP</h2>
+        <p>ควรใช้แต่ละอย่างเมื่อใด?</p>
     </div>
+</div>
+<div class="content" id="content-5">
+    <p><strong>TCP:</strong> ให้ความสำคัญกับความน่าเชื่อถือและความปลอดภัยของข้อมูล ทำให้ข้อมูลถูกส่งอย่างครบถ้วน แม้จะต้องใช้เวลามากขึ้น</p>
+    <p><strong>UDP:</strong> เป็นโปรโตคอลที่เร็วกว่า แต่ไม่มีการรับประกันความน่าเชื่อถือของข้อมูล เหมาะสำหรับการใช้งานที่ต้องการความเร็วสูง เช่น การสตรีมวิดีโอ การโทรศัพท์ผ่านอินเทอร์เน็ต (VoIP) หรือการเล่นเกมออนไลน์</p>
+    <ul>
+        <li><strong>การเชื่อมต่อ:</strong> TCP ต้องการการสร้างการเชื่อมต่อก่อน (Three-Way Handshake) ในขณะที่ UDP สามารถส่งข้อมูลได้ทันทีโดยไม่ต้องมีการสร้างการเชื่อมต่อ</li>
+        <li><strong>ความน่าเชื่อถือ:</strong> TCP รับประกันความถูกต้องของข้อมูลและมีการส่งข้อมูลซ้ำหากสูญหาย, UDP ไม่มีการรับประกันนี้</li>
+        <li><strong>ความเร็ว:</strong> UDP มีความเร็วสูงกว่าเพราะไม่มีการตรวจสอบหรือการควบคุมข้อผิดพลาด</li>
+    </ul>
+
+    <!-- เพิ่มรูป + คำอธิบาย -->
+    <div style="text-align:center; margin-top:20px;">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTPIHAnxOAHny6vVJ84U-7WEnKhvT2jTe96Wg&s" 
+             alt="TCP vs UDP Diagram" 
+             style="max-width:100%; height:auto; border-radius:8px; box-shadow:0 4px 15px rgba(0,0,0,0.1);">
+        <p style="font-size:0.9rem; color:#7f6a44; margin-top:8px;">
+            ภาพเปรียบเทียบความแตกต่างระหว่าง TCP และ UDP
+        </p>
+    </div>
+</div>
 
     <div class="authors">
         <h3>ผู้จัดทำ</h3>
@@ -248,4 +257,5 @@
 </body>
 
 </html>
+
 
