--- a/login.html
+++ b/login.html
@@ -209,13 +209,14 @@
 
     <!-- เพิ่มรูป + คำอธิบาย -->
     <div style="text-align:center; margin-top:20px;">
-        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTPIHAnxOAHny6vVJ84U-7WEnKhvT2jTe96Wg&s" 
-             alt="TCP vs UDP Diagram" 
-             style="max-width:100%; height:auto; border-radius:8px; box-shadow:0 4px 15px rgba(0,0,0,0.1);">
-        <p style="font-size:0.9rem; color:#7f6a44; margin-top:8px;">
-            ภาพเปรียบเทียบความแตกต่างระหว่าง TCP และ UDP
-        </p>
-    </div>
+        <div style="text-align:center; margin-top:20px;">
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTPIHAnxOAHny6vVJ84U-7WEnKhvT2jTe96Wg&s" 
+         alt="TCP vs UDP Diagram" 
+         style="max-width:100%; height:auto; border-radius:8px; box-shadow:0 4px 15px rgba(0,0,0,0.1);">
+    <p style="font-size:0.9rem; color:#7f6a44; margin-top:8px;">
+        ภาพเปรียบเทียบความแตกต่างระหว่าง TCP และ UDP
+    </p>
+</div>
 </div>
 
     <div class="authors">
@@ -257,5 +258,6 @@
 </body>
 
 </html>
+
 
 
