--- a/login.html
+++ b/login.html
@@ -191,14 +191,7 @@
                 <li><strong>Efficiency:</strong> แม้จะมีการทำงานที่ซับซ้อน แต่ก็มีประสิทธิภาพในการจัดการการส่งข้อมูลจำนวนมาก</li>
             </ul>
         </div>
-
-        <div class="card" onclick="toggleContent(5)">
-            <div class="card-content">
-                <h2>ความแตกต่างระหว่าง TCP และ UDP</h2>
-                <p>ควรใช้แต่ละอย่างเมื่อใด?</p>
-            </div>
-        </div>
-        <div class="card" onclick="toggleContent(5)">
+<div class="card" onclick="toggleContent(5)">
     <div class="card-content">
         <h2>ความแตกต่างระหว่าง TCP และ UDP</h2>
         <p>ควรใช้แต่ละอย่างเมื่อใด?</p>
@@ -215,14 +208,14 @@
 
     <!-- เพิ่มรูป + คำอธิบาย -->
     <div style="text-align:center; margin-top:20px;">
-        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTPIHAnxOAHny6vVJ84U-7WEnKhvT2jTe96Wg&s" 
+        <img src="https://i.ibb.co/351mCFF3/D087-E057-72-E7-45-BD-BBEC-E43-D07-BFB31-D.png" 
              alt="TCP vs UDP Diagram" 
              style="max-width:100%; height:auto; border-radius:8px; box-shadow:0 4px 15px rgba(0,0,0,0.1);">
         <p style="font-size:0.9rem; color:#7f6a44; margin-top:8px;">
             ภาพเปรียบเทียบความแตกต่างระหว่าง TCP และ UDP
         </p>
     </div>
-    </div>
+</div>
 
     <div class="authors">
         <h3>ผู้จัดทำ</h3>
@@ -263,6 +256,7 @@
 </body>
 
 </html>
+
 
 
 
