--- a/index.html
+++ b/index.html
@@ -53,44 +53,86 @@
             color: #4b5563;
         }
 
-        /* ปุ่มน้ำตาลเข้ม */
         .button {
             display: inline-block;
-            background-color: #5c4033; /* สีน้ำตาลเข้ม */
+            background-color: #5c4033;
             color: white;
             border: none;
-            padding: 14px 28px;
-            font-size: 1.1rem;
+            padding: 12px 24px;
+            font-size: 1.05rem;
             font-weight: 500;
             cursor: pointer;
             border-radius: 8px;
             text-decoration: none;
+            margin: 5px;
             transition: background-color 0.3s ease, transform 0.2s ease, box-shadow 0.3s ease;
             box-shadow: 0 6px 15px rgba(0,0,0,0.1);
         }
 
         .button:hover {
-            background-color: #7a5c46; /* น้ำตาลอ่อนขึ้นเล็กน้อย */
+            background-color: #7a5c46;
             transform: translateY(-2px);
             box-shadow: 0 10px 20px rgba(0,0,0,0.15);
+        }
+
+        /* ปุ่มเล็ก */
+        .button-small {
+            padding: 8px 16px;
+            font-size: 0.9rem;
+            background-color: #4b5563;
+        }
+
+        .button-small:hover {
+            background-color: #6b7280;
+        }
+
+        .hidden {
+            display: none;
+        }
+
+        img {
+            max-width: 100%;
+            border-radius: 12px;
+            margin-bottom: 15px;
+        }
+
+        .caption {
+            font-size: 1.2rem;
+            font-weight: 600;
+            color: #1f2937;
+            margin-bottom: 20px;
         }
     </style>
 </head>
 <body>
 
     <div class="login-container">
-        <h1>เสนอ<br>อาจารย์สุวิทย์ วงศ์คุ้มสิน</h1>
-        <p>โปรดคลิกที่ปุ่มด้านล่างเพื่อเข้าถึงเนื้อหาของ TCP Concepts</p>
-        <button class="button" onclick="showAlert()">เข้าสู่หน้าเนื้อหา</button>
+        <!-- ส่วนแรก -->
+        <div id="intro">
+            <h1>เสนอ<br>อาจารย์สุวิทย์ วงศ์คุ้มสิน</h1>
+            <p>โปรดคลิกที่ปุ่มด้านล่างเพื่อเข้าถึงเนื้อหาของ Transmission Control Protocol</p>
+            <button class="button" onclick="showImage()">ถัดไป</button>
+        </div>
+
+        <!-- ส่วนรูปภาพ -->
+        <div id="image-section" class="hidden">
+            <img src="t.jpg" alt="อาจารย์สุวิทย์">
+            <p class="caption">สวัสดีจ้านักเรียน</p>
+            <a href="login.html" class="button">เข้าสู่หน้าเนื้อหา</a>
+            <button class="button-small" onclick="goBack()">ย้อนกลับ</button>
+        </div>
     </div>
 
     <script>
-        function showAlert() {
-            alert("ยินดีต้อนรับเข้าสู่หน้าเนื้อหา TCP Concepts ");
+        function showImage() {
+            document.getElementById("intro").classList.add("hidden");
+            document.getElementById("image-section").classList.remove("hidden");
+        }
+        function goBack() {
+            document.getElementById("image-section").classList.add("hidden");
+            document.getElementById("intro").classList.remove("hidden");
         }
     </script>
 
 </body>
 </html>
->
-
