--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
         <!-- ส่วนแรก -->
         <div id="intro">
             <h1>เสนอ<br>อาจารย์สุวิทย์ วงศ์คุ้มสิน</h1>
-            <p>โปรดคลิกที่ปุ่มด้านล่างเพื่อเข้าถึงเนื้อหาของ TCP Concepts</p>
-            <button class="button" onclick="showImage()">เข้าสู่หน้าเนื้อหา</button>
+            <p>โปรดคลิกที่ปุ่มด้านล่างเพื่อเข้าถึงเนื้อหาของ TCP </p>
+            <button class="button" onclick="showImage()">ถัดไป</button>
         </div>
 
         <!-- ส่วนรูปภาพ -->
@@ -119,3 +119,4 @@
 
 </body>
 </html>
+
