--- a/index.html
+++ b/index.html
@@ -1,138 +1,197 @@
 <!DOCTYPE html>
 <html lang="th">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>อาจารย์สุวิท</title>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
-    <style>
-        body, h1, p, a {
-            margin: 0;
-            padding: 0;
-            font-family: 'Inter', sans-serif;
-        }
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>อาจารย์ สุวิท</title>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
+<style>
+body, h1, p, a, button {
+    margin: 0;
+    padding: 0;
+    font-family: 'Inter', sans-serif;
+}
 
-        body {
-            background: linear-gradient(135deg, #f0f4f8, #d9e2ec);
-            color: #333;
-            line-height: 1.6;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            min-height: 100vh;
-            padding: 20px;
-        }
+body {
+    background: linear-gradient(135deg, #f0f4f8, #d9e2ec);
+    color: #333;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    padding: 20px;
+    overflow: hidden;
+}
 
-        .login-container {
-            background-color: #ffffff;
-            width: 100%;
-            max-width: 420px;
-            padding: 40px 30px;
-            text-align: center;
-            border-radius: 15px;
-            box-shadow: 0 15px 30px rgba(0, 0, 0, 0.1);
-            transition: transform 0.3s ease, box-shadow 0.3s ease;
-        }
+.login-container {
+    background-color: #ffffff;
+    width: 100%;
+    max-width: 420px;
+    padding: 40px 30px;
+    text-align: center;
+    border-radius: 15px;
+    box-shadow: 0 15px 30px rgba(0, 0, 0, 0.1);
+    position: relative;
+}
 
-        .login-container:hover {
-            transform: translateY(-5px);
-            box-shadow: 0 20px 40px rgba(0, 0, 0, 0.15);
-        }
+h1 {
+    font-size: 2rem;
+    font-weight: 700;
+    color: #1f2937;
+    margin-bottom: 15px;
+    line-height: 1.3;
+}
 
-        h1 {
-            font-size: 2rem;
-            font-weight: 700;
-            color: #1f2937;
-            margin-bottom: 15px;
-            line-height: 1.3;
-        }
+p {
+    font-size: 1.1rem;
+    margin-bottom: 30px;
+    color: #4b5563;
+}
 
-        p {
-            font-size: 1.1rem;
-            margin-bottom: 30px;
-            color: #4b5563;
-        }
+.button {
+    padding: 12px 24px;
+    font-size: 1rem;
+    font-weight: 500;
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
+    margin: 5px;
+    transition: all 0.3s ease;
+    box-shadow: 0 6px 15px rgba(0,0,0,0.1);
+    background-color: #5c4033;
+    color: white;
+}
 
-        .button {
-            display: inline-block;
-            background-color: #5c4033;
-            color: white;
-            border: none;
-            padding: 12px 24px;
-            font-size: 1.05rem;
-            font-weight: 500;
-            cursor: pointer;
-            border-radius: 8px;
-            text-decoration: none;
-            margin: 5px;
-            transition: background-color 0.3s ease, transform 0.2s ease, box-shadow 0.3s ease;
-            box-shadow: 0 6px 15px rgba(0,0,0,0.1);
-        }
+.button:hover {
+    background-color: #7a5c46;
+    transform: translateY(-2px);
+    box-shadow: 0 10px 20px rgba(0,0,0,0.15);
+}
 
-        .button:hover {
-            background-color: #7a5c46;
-            transform: translateY(-2px);
-            box-shadow: 0 10px 20px rgba(0,0,0,0.15);
-        }
+.button-small {
+    background-color: #4b5563;
+}
 
-        /* ปุ่มเล็ก */
-        .button-small {
-            padding: 8px 16px;
-            font-size: 0.9rem;
-            background-color: #4b5563;
-        }
+.button-small:hover {
+    background-color: #6b7280;
+}
 
-        .button-small:hover {
-            background-color: #6b7280;
-        }
+.hidden {
+    display: none;
+}
 
-        .hidden {
-            display: none;
-        }
+img {
+    max-width: 100%;
+    border-radius: 12px;
+    margin-bottom: 15px;
+    transition: transform 0.5s ease;
+}
 
-        img {
-            max-width: 100%;
-            border-radius: 12px;
-            margin-bottom: 15px;
-        }
+img.show-effect {
+    animation: img-pop 0.8s forwards;
+}
 
-        .caption {
-            font-size: 1.2rem;
-            font-weight: 600;
-            color: #1f2937;
-            margin-bottom: 20px;
-        }
-    </style>
+@keyframes img-pop {
+    0% { transform: scale(0.8); opacity: 0; }
+    50% { transform: scale(1.1); }
+    100% { transform: scale(1); opacity: 1; }
+}
+
+.caption {
+    font-size: 1.2rem;
+    font-weight: 600;
+    color: #1f2937;
+    margin-bottom: 20px;
+}
+
+.button-group {
+    display: flex;
+    justify-content: center;
+    gap: 15px;
+    margin-top: 20px;
+}
+
+/* พลุหลายสีลอยขึ้น */
+.firework {
+    position: absolute;
+    width: 8px;
+    height: 8px;
+    border-radius: 50%;
+    pointer-events: none;
+    opacity: 1;
+    animation: floatUp 1s forwards;
+}
+
+@keyframes floatUp {
+    0% { transform: translate(0,0) scale(1); opacity: 1; }
+    100% { transform: translate(var(--x), var(--y)) scale(0.5); opacity: 0; }
+}
+</style>
 </head>
 <body>
 
-    <div class="login-container">
-        <!-- ส่วนแรก -->
-        <div id="intro">
-            <h1>เสนอ<br>อาจารย์สุวิทย์ วงศ์คุ้มสิน</h1>
-            <p>โปรดคลิกที่ปุ่มด้านล่างเพื่อเข้าถึงเนื้อหาของ TCP Concepts</p>
-            <button class="button" onclick="showImage()">ถัดไป</button>
+<div class="login-container">
+    <!-- หน้าแรก -->
+    <div id="intro">
+        <h1>เสนอ<br>อาจารย์สุวิทย์ วงศ์คุ้มสิน</h1>
+        <p>โปรดคลิกที่ปุ่มด้านล่างเพื่อเข้าถึงเนื้อหาของ TCP </p>
+        <div class="button-group">
+            <button class="button" onclick="showImageWithFireworks()">ถัดไป</button>
+            <button class="button-small" onclick="alert('ยกเลิก')">ยกเลิก</button>
         </div>
+    </div>
 
-        <!-- ส่วนรูปภาพ -->
-        <div id="image-section" class="hidden">
-            <img src="t.jpg" alt="อาจารย์สุวิทย์">
-            <p class="caption">สวัสดีจ้านักเรียน</p>
+    <!-- หน้าเนื้อหา -->
+    <div id="image-section" class="hidden">
+        <img src="t.jpg" alt="อาจารย์สุวิทย์" id="teacher-img">
+        <p class="caption">สวัสดีจ้านักเรียน</p>
+        <div class="button-group">
             <a href="login.html" class="button">เข้าสู่หน้าเนื้อหา</a>
             <button class="button-small" onclick="goBack()">ย้อนกลับ</button>
         </div>
     </div>
+</div>
 
-    <script>
-        function showImage() {
-            document.getElementById("intro").classList.add("hidden");
-            document.getElementById("image-section").classList.remove("hidden");
-        }
-        function goBack() {
-            document.getElementById("image-section").classList.add("hidden");
-            document.getElementById("intro").classList.remove("hidden");
-        }
-    </script>
+<script>
+function createFireworks() {
+    const colors = ['#ff4d4d','#ffcc00','#4dff4d','#4d4dff','#ff4dff','#00ffff'];
+    for(let i=0; i<30; i++){
+        const firework = document.createElement('div');
+        firework.classList.add('firework');
+        const color = colors[Math.floor(Math.random() * colors.length)];
+        firework.style.backgroundColor = color;
+
+        // กระจายรอบภาพ
+        const angle = Math.random() * 2 * Math.PI;
+        const radius = Math.random() * 120 + 50;
+        firework.style.left = '50%';
+        firework.style.top = '50%';
+        firework.style.setProperty('--x', radius * Math.cos(angle) + 'px');
+        firework.style.setProperty('--y', -Math.abs(radius * Math.sin(angle)) + 'px'); // ลอยขึ้นด้านบน
+
+        document.querySelector('.login-container').appendChild(firework);
+        setTimeout(()=> firework.remove(), 1000);
+    }
+}
+
+function showImageWithFireworks() {
+    createFireworks();
+
+    const img = document.getElementById('teacher-img');
+    img.classList.remove('show-effect'); // รีเซ็ต animation
+    setTimeout(()=> img.classList.add('show-effect'), 50);
+
+    setTimeout(() => {
+        document.getElementById("intro").classList.add("hidden");
+        document.getElementById("image-section").classList.remove("hidden");
+    }, 400);
+}
+
+function goBack() {
+    document.getElementById("image-section").classList.add("hidden");
+    document.getElementById("intro").classList.remove("hidden");
+}
+</script>
 
 </body>
 </html>
